--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/arnesson/cordova-plugin-firebase"
   },
-  "name": "cordova-plugin-firebase",
+  "name": "@alpha-health/cordova-plugin-firebase",
   "version": "1.0.5",
   "description": "Cordova plugin for Google Firebase",
   "cordova": {
